<?xml version="1.0"?>
<package format="3">
  <name>question_3_charger_demo</name>
  <version>0.0.1</version>
  <description>Service vs Action comparison for a long running charging station task</description>
  <maintainer email="pradheeplakshmanan20@gmail.com">pradheep</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>question_3_charger_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>