<?xml version="1.0"?>
<package format="3">
  <name>question_3_charger_interfaces</name>
  <version>0.0.1</version>
  <description>Custom service and action interfaces for the charger demo</description>
  <maintainer email="pradheeplakshmanan20@gmail.com">pradheep</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>